# gosperbase

./: .gitignore  README.md  flowbase.cabal  gosperbase.cabal
Data/: FlowsnakeBase.hs  GosperBase.hs
Data/GosperBase/: Internals.hs
doc/: GosperBase.ps
test/: test.hs
