name:                flowbase
version:             0.1.0.0
synopsis:	     Arithmetic in flowsnake base
description:	     Arithmetic of complex numbers in base 2.5-0.866i, the scale of flowsnakes
homepage:            https://github.com/phma/flowbase#readme
license:             BSD3
license-file:        LICENSE
author:              Pierre Abbat
maintainer:          phma@bezitopo.org
copyright:           2022 Pierre Abbat
category:            Math
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

Library
  default-language:    Haskell2010
  Exposed-modules:     Data.FlowsnakeBase
  build-depends:       base >= 4.7 && < 5, array
